--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-permalink: /:categories/:title
+permalink: /:categories/:year/:month/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
 highlighter: pygments
