--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+collections:
+    docs:
+        output: true
+
 permalink: /:categories/:year/:month/:title
 
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
