Refactored page title tag

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: SimpleID
+description: 'SimpleID is a simple, personal OpenID provider written in PHP.'
+
 collections:
     docs:
         output: true
