Added trailing slash to _config.yml to support Jekyll 2

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ collections:
     api:
         output: true
 
-permalink: /:categories/:year/:month/:title
+permalink: /:categories/:year/:month/:title/
 
 exclude: 
     - .rvmrc
