--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,6 +5,8 @@ on: [ push, pull_request ]
 jobs:
   github-pages:
     runs-on: ubuntu-latest
+    env:
+      PAGES_REPO_NWO: simpleid/simpleid.github.io
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -21,3 +23,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           build_only: true
+
