--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "eleventy-xml-plugin": "^0.1.0",
     "js-yaml": "^4.1.0",
+    "markdown-it-attrs": "^4.1.3",
     "sass": "^1.49.9"
   }
 }
