Update github repository url

--- a/_data/site.yml
+++ b/_data/site.yml
@@ -3,7 +3,8 @@ description: 'SimpleID is a simple, personal OpenID provider written in PHP.'
 url: https://simpleid.org
 
 github:
-    owner_url: https://github.com/simpleid/simpleid
+    owner_url: https://github.com/simpleid
+    repository_url: https://github.com/simpleid/simpleid.github.io
 
 sourceforge:
     project_url: http://sourceforge.net/projects/simpleid
