--- a/_data/site.yml
+++ b/_data/site.yml
@@ -1,6 +1,7 @@
 title: SimpleID
 description: 'SimpleID is a simple, personal OpenID provider written in PHP.'
 url: https://simpleid.org
+# baseurl:
 
 github:
     owner_url: https://github.com/simpleid
