--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@11ty/eleventy-navigation": "^0.3.2",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
+    "elasticlunr": "^0.9.5",
     "eleventy-plugin-toc": "^1.1.5",
     "eleventy-xml-plugin": "^0.1.0",
     "js-yaml": "^4.1.0",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-attrs": "^4.1.3",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "string-strip-html": "^8.3.0"
   }
 }
