--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.0.0",
     "elasticlunr": "^0.9.5",
     "eleventy-plugin-toc": "^1.1.5",
+    "eleventy-sass": "^1.1.4",
     "eleventy-xml-plugin": "^0.1.0",
     "js-yaml": "^4.1.0",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-attrs": "^4.1.3",
-    "sass": "^1.49.9",
     "string-strip-html": "^8.3.0"
   }
 }
