--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,7 +3,8 @@ name: Test build
 on: [ push, pull_request ]
 
 jobs:
-  github-pages:
+  build:
+    name: Build
     runs-on: ubuntu-latest
     env:
       PAGES_REPO_NWO: simpleid/simpleid.github.io
@@ -11,16 +12,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Cache dependencies
-        uses: actions/cache@v2
+      - name: Set up nodejs
+        uses: actions/setup-node@v2
         with:
-          path: vendor/bundle
-          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile') }}
-          restore-keys: "${{ runner.os }}-gems-"
+          node-version: '16'
+          cache: npm
 
-      - name: Run Jekyll build
-        uses: helaili/jekyll-action@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          build_only: true
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run Eleventy build
+        run: npm build
 
