Update github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,24 +38,26 @@ jobs:
           path: artifact.tar
           if-no-files-found: warn
 
-  # deploy:
-  #   name: Deploy
-  #   needs: build
-  #   if: github.ref == 'refs/heads/master'
-  #   runs-on: ubuntu-latest
+  deploy:
+    name: Deploy
+    needs: build
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Download build output
-  #       uses: actions/upload-artifact@v2
-  #       with:
-  #         name: gh-pages
+    steps:
+      - name: Download build
+        uses: actions/upload-artifact@v2
+        with:
+          name: gh-pages
 
-  #     - name: Decompress
-  #       run: tar -xvf artifact.tar -C _site
+      - name: Extract build
+        run: |
+          mkdir _site
+          tar -xvf artifact.tar -C _site
 
-  #     - name: Deploy to Github pages
-  #       uses: peaceiris/actions-gh-pages@v3
-  #       with:
-  #         publish_dir: _site 
-  #         publish_branch: gh-pages
-  #         github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to Github pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          publish_dir: _site 
+          publish_branch: gh-pages
+          github_token: ${{ secrets.GITHUB_TOKEN }}
