--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,12 +41,12 @@ jobs:
   deploy:
     name: Deploy
     needs: build
-    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
     runs-on: ubuntu-latest
 
     steps:
       - name: Download build
-        uses: actions/upload-artifact@v2
+        uses: actions/download-artifact@v2
         with:
           name: gh-pages
 
