--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
   deploy:
     name: Deploy
     needs: build
-    if: github.ref == 'refs/heads/master' && github.event_name == 'push'
+    if: ${{ github.ref == 'refs/heads/master' && github.event_name == 'push' && github.actor != 'dependabot' }}
     runs-on: ubuntu-latest
 
     steps:
