--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "elasticlunr": "^0.9.5",
     "eleventy-plugin-toc": "^1.1.5",
     "eleventy-sass": "^1.1.4",
-    "eleventy-xml-plugin": "^0.1.0",
+    "eleventy-xml-plugin": "github:sentience/eleventy-xml-plugin#dist",
     "js-yaml": "^4.1.0",
     "markdown-it-anchor": "^8.4.1",
     "markdown-it-attrs": "^4.1.3",
