Update dependabot configuration for string-strip-html

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,8 @@ updates:
     directory: '/'
     schedule:
       interval: weekly
+
+    ignore:
+      - dependency-name: string-strip-html
+        update-types:
+          - 'version-update:semver-major'
