--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: Run Eleventy build
         run: npm run-script build
+        env:
+          NODE_OPTIONS: "--experimental-require-module"
 
       - name: Upload build output
         uses: actions/upload-pages-artifact@v3
