--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "elasticlunr": "^0.9.5",
     "eleventy-plugin-toc": "^1.1.5",
-    "eleventy-sass": "^2.2.6",
+    "eleventy-sass": "^3.0.0-beta.0",
     "html-entities": "^2.5.2",
     "js-yaml": "^4.1.0",
     "markdown-it-anchor": "^9.2.0",
