--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
   "homepage": "https://github.com/simpleid/simpleid.github.io#readme",
   "dependencies": {
     "@11ty/eleventy": "^3.0.0",
-    "@11ty/eleventy-navigation": "^0.3.2",
+    "@11ty/eleventy-navigation": "^1.0.4",
     "@11ty/eleventy-plugin-rss": "^1.1.2",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "elasticlunr": "^0.9.5",
     "eleventy-plugin-toc": "^1.1.5",
-    "html-entities": "^2.5.2",
+    "html-entities": "^2.6.0",
     "js-yaml": "^4.1.0",
     "markdown-it-anchor": "^9.2.0",
-    "markdown-it-attrs": "^4.2.0",
-    "markdown-it-github-alerts": "^0.3.0",
+    "markdown-it-attrs": "^4.3.1",
+    "markdown-it-github-alerts": "~0.3.2",
     "sass": "^1.89.0",
     "string-strip-html": "~8.5.0"
   }
